refactor: refine tool command implementation details