@@ -18,12 +18,14 @@ import io.modelcontextprotocol.server.McpSyncServer;
 import io.modelcontextprotocol.spec.McpSchema;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
+import java.util.Base64;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 import org.apache.pulsar.admin.mcp.client.PulsarClientManager;
 import org.apache.pulsar.client.admin.PulsarAdmin;
 import org.apache.pulsar.client.api.CompressionType;
@@ -193,7 +195,6 @@ public class MessageTools extends BasePulsarTools {
         mcpServer.addTool(McpServerFeatures.SyncToolSpecification.builder()
                 .tool(tool)
                 .callHandler((exchange, request) -> {
-//                    Reader<byte[]> reader = null;
                     try {
                         String topic = buildFullTopicName(request.arguments());
                         String subscriptionName = getStringParam(request.arguments(), "subscriptionName");
@@ -221,12 +222,19 @@ public class MessageTools extends BasePulsarTools {
                                     messageInfo.put("eventTime", message.getEventTime());
                                     messageInfo.put("key", message.getKey());
                                     messageInfo.put("publishTime", message.getPublishTime());
-                                    messageInfo.put("data", new String(message.getData(), StandardCharsets.UTF_8));
-                                    messageInfo.put("producerName", message.getProducerName());
+                                    messageInfo.put("payloadBase64",
+                                            Base64.getEncoder().encodeToString(message.getData()));
+                                    try {
+                                        messageInfo.put("textUtf8",
+                                                new String(message.getData(), StandardCharsets.UTF_8));
+                                    } catch (Exception ignore) {
 
+                                    }
+                                    messageInfo.put("producerName", message.getProducerName());
                                     return messageInfo;
                                 })
-                                .toList();
+                                .collect(Collectors.toList());
+
 
                         result.put("messages", detailedMessages);
 
@@ -325,11 +333,19 @@ public class MessageTools extends BasePulsarTools {
                         String topic = buildFullTopicName(request.arguments());
                         String subscriptionName = getRequiredStringParam(request.arguments(), "subscriptionName");
 
+                        try {
+                            var subs = pulsarAdmin.topics().getSubscriptions(topic);
+                            if (subs == null || !subs.contains(subscriptionName)) {
+                                return createErrorResult("Subscription not found: " + subscriptionName);
+                            }
+                        } catch (Exception ignore) {
+
+                        }
+
                         pulsarAdmin.topics().expireMessages(topic, subscriptionName, 0);
 
                         Map<String, Object> result = new HashMap<>();
-                        result.put("topic",
-                                topic);
+                        result.put("topic", topic);
                         result.put("subscriptionName", subscriptionName);
                         result.put("expiredAll", true);
 
@@ -377,11 +393,38 @@ public class MessageTools extends BasePulsarTools {
                         String topic = buildFullTopicName(request.arguments());
                         String subscriptionName = getRequiredStringParam(request.arguments(), "subscriptionName");
 
-                        long backlog = pulsarAdmin.topics()
-                                .getStats(topic)
-                                .getSubscriptions()
-                                .get(subscriptionName)
-                                .getMsgBacklog();
+                        long backlog = 0L;
+                        boolean found = false;
+
+                        var meta = pulsarAdmin.topics().getPartitionedTopicMetadata(topic);
+                        if (meta != null && meta.partitions > 0) {
+                            var ps = pulsarAdmin.topics().getPartitionedStats(topic, true);
+                            if (ps != null && ps.getPartitions() != null) {
+                                for (var partEntry : ps.getPartitions().entrySet()) {
+                                    TopicStats ts = partEntry.getValue();
+                                    if (ts != null && ts.getSubscriptions() != null) {
+                                        var sub = ts.getSubscriptions().get(subscriptionName);
+                                        if (sub != null) {
+                                            backlog += sub.getMsgBacklog();
+                                            found = true;
+                                        }
+                                    }
+                                }
+                            }
+                        } else {
+                            TopicStats stats = pulsarAdmin.topics().getStats(topic);
+                            if (stats != null && stats.getSubscriptions() != null) {
+                                var sub = stats.getSubscriptions().get(subscriptionName);
+                                if (sub != null) {
+                                    backlog = sub.getMsgBacklog();
+                                    found = true;
+                                }
+                            }
+                        }
+
+                        if (!found) {
+                            return createErrorResult("Subscription not found: " + subscriptionName);
+                        }
 
                         Map<String, Object> result = new HashMap<>();
                         result.put("topic", topic);
@@ -389,7 +432,6 @@ public class MessageTools extends BasePulsarTools {
                         result.put("backlog", backlog);
 
                         addTopicBreakdown(result, topic);
-
                         return createSuccessResult("Backlog retrieved successfully", result);
 
                     } catch (IllegalArgumentException e) {
@@ -431,25 +473,71 @@ public class MessageTools extends BasePulsarTools {
                         String topic = buildFullTopicName(request.arguments());
                         String subscriptionName = getStringParam(request.arguments(), "subscriptionName");
 
-                        TopicStats stats = pulsarAdmin.topics().getStats(topic);
-
                         Map<String, Object> result = new HashMap<>();
                         result.put("topic", topic);
-                        result.put("msgInCounter", stats.getMsgInCounter());
-                        result.put("msgOutCounter", stats.getMsgOutCounter());
-                        result.put("bytesInCounter", stats.getBytesInCounter());
-                        result.put("bytesOutCounter", stats.getBytesOutCounter());
 
-                        if (subscriptionName != null && stats.getSubscriptions().containsKey(subscriptionName)) {
-                            SubscriptionStats subStats = stats.getSubscriptions().get(subscriptionName);
-                            result.put("subscriptionName", subscriptionName);
-                            result.put("msgBacklog", subStats.getMsgBacklog());
-                            result.put("msgRateOut", subStats.getMsgRateOut());
-                            result.put("msgRateRedeliver", subStats.getMsgRateRedeliver());
+                        var meta = pulsarAdmin.topics().getPartitionedTopicMetadata(topic);
+                        if (meta != null && meta.partitions > 0) {
+                            var ps = pulsarAdmin.topics().getPartitionedStats(topic, true);
+                            if (ps == null) {
+                                return createErrorResult("Failed to fetch partitioned stats");
+                            }
+
+                            result.put("msgInCounter", ps.getMsgInCounter());
+                            result.put("msgOutCounter", ps.getMsgOutCounter());
+                            result.put("bytesInCounter", ps.getBytesInCounter());
+                            result.put("bytesOutCounter", ps.getBytesOutCounter());
+
+                            if (subscriptionName != null && !subscriptionName.isBlank()) {
+                                long backlog = 0L;
+                                double rateOut = 0D;
+                                double rateRedeliver = 0D;
+                                boolean found = false;
+
+                                if (ps.getPartitions() != null) {
+                                    for (var partEntry : ps.getPartitions().entrySet()) {
+                                        TopicStats ts = partEntry.getValue();
+                                        if (ts != null && ts.getSubscriptions() != null) {
+                                            var sub = ts.getSubscriptions().get(subscriptionName);
+                                            if (sub != null) {
+                                                backlog += sub.getMsgBacklog();
+                                                rateOut += sub.getMsgRateOut();
+                                                rateRedeliver += sub.getMsgRateRedeliver();
+                                                found = true;
+                                            }
+                                        }
+                                    }
+                                }
+
+                                if (!found) {
+                                    return createErrorResult("Subscription not found: " + subscriptionName);
+                                }
+                                result.put("subscriptionName", subscriptionName);
+                                result.put("msgBacklog", backlog);
+                                result.put("msgRateOut", rateOut);
+                                result.put("msgRateRedeliver", rateRedeliver);
+                            }
+                        } else {
+                            TopicStats stats = pulsarAdmin.topics().getStats(topic);
+                            result.put("msgInCounter", stats.getMsgInCounter());
+                            result.put("msgOutCounter", stats.getMsgOutCounter());
+                            result.put("bytesInCounter", stats.getBytesInCounter());
+                            result.put("bytesOutCounter", stats.getBytesOutCounter());
+
+                            if (subscriptionName != null && !subscriptionName.isBlank()) {
+                                if (stats.getSubscriptions() == null
+                                        || !stats.getSubscriptions().containsKey(subscriptionName)) {
+                                    return createErrorResult("Subscription not found: " + subscriptionName);
+                                }
+                                SubscriptionStats subStats = stats.getSubscriptions().get(subscriptionName);
+                                result.put("subscriptionName", subscriptionName);
+                                result.put("msgBacklog", subStats.getMsgBacklog());
+                                result.put("msgRateOut", subStats.getMsgRateOut());
+                                result.put("msgRateRedeliver", subStats.getMsgRateRedeliver());
+                            }
                         }
 
                         addTopicBreakdown(result, topic);
-
                         return createSuccessResult("Fetched message stats successfully", result);
 
                     } catch (IllegalArgumentException e) {
@@ -500,9 +588,15 @@ public class MessageTools extends BasePulsarTools {
                         String message   = getRequiredStringParam(request.arguments(), "message");
                         String key       = getStringParam(request.arguments(), "key");
 
-                        @SuppressWarnings("unchecked")
-                        Map<String, String> props = (Map<String, String>) request.arguments()
-                                .getOrDefault("properties", Map.of());
+                        Map<String, String> propsSafe = new HashMap<>();
+                        Object propsObj = request.arguments().get("properties");
+                        if (propsObj instanceof Map<?, ?> raw) {
+                            for (var e : raw.entrySet()) {
+                                if (e.getKey() != null && e.getValue() != null) {
+                                    propsSafe.put(String.valueOf(e.getKey()), String.valueOf(e.getValue()));
+                                }
+                            }
+                        }
 
                         Producer<byte[]> producer = getOrCreateProducer(fullTopic);
 
@@ -512,8 +606,8 @@ public class MessageTools extends BasePulsarTools {
                         if (key != null && !key.isEmpty()) {
                             builder = builder.key(key);
                         }
-                        if (props != null && !props.isEmpty()) {
-                            builder = builder.properties(props);
+                        if (!propsSafe.isEmpty()) {
+                            builder = builder.properties(propsSafe);
                         }
 
                         MessageId msgId = builder.send();
@@ -531,7 +625,6 @@ public class MessageTools extends BasePulsarTools {
                     }
                 }).build());
     }
-
 
     private void registerReceiveMessages(McpSyncServer mcpServer) {
         McpSchema.Tool tool = createTool(
@@ -557,9 +650,20 @@ public class MessageTools extends BasePulsarTools {
                         },
                         "timeoutMs": {
                             "type": "integer",
-                            "description": "Timeout in milliseconds for receiving messages",
+                            "description": "Total timeout budget in milliseconds (not per-message)",
                             "minimum": 1000,
                             "default": 5000
+                        },
+                        "ack": {
+                            "type": "boolean",
+                            "description": "Acknowledge messages after receiving (default: true)",
+                            "default": true
+                        },
+                        "subscriptionType": {
+                            "type": "string",
+                            "description": "Consumer subscription type",
+                            "enum": ["Exclusive","Shared","Failover","Key_Shared"],
+                            "default": "Shared"
                         }
                     },
                     "required": ["topic", "subscriptionName"]
@@ -573,44 +677,94 @@ public class MessageTools extends BasePulsarTools {
                     try {
                         String topic = buildFullTopicName(request.arguments());
                         String subscriptionName = getRequiredStringParam(request.arguments(), "subscriptionName");
-                        Integer messageCount = getIntParam(request.arguments(), "messageCount", 10);
-                        Integer timeoutMs = getIntParam(request.arguments(), "timeoutMs", 5000);
+                        int messageCount = Math.max(1, getIntParam(request.arguments(), "messageCount", 10));
 
-                        List<Map<String, Object>> messages = new ArrayList<>();
+                        if (messageCount > 1000) {
+                            return createErrorResult("messageCount too large (max 1000)");
+                        }
+                        int timeoutMs = Math.max(1000, getIntParam(request.arguments(), "timeoutMs", 5000));
+                        if (timeoutMs > 120_000) {
+                            return createErrorResult("timeoutMs too large (max 120000)");
+                        }
+                        boolean ack = getBooleanParam(request.arguments(), "ack", true);
+                        String subTypeStr = getStringParam(request.arguments(), "subscriptionType");
+                        SubscriptionType subType = SubscriptionType.Shared; // 默认 Shared，避免 Exclusive 抢占
+                        if (subTypeStr != null) {
+                            try {
+                                subType = SubscriptionType.valueOf(subTypeStr.replace('-', '_'));
+                            } catch (IllegalArgumentException ignore) {
+
+                            }
+                        }
 
                         try {
-                            PulsarClient pulsarClient = getClient();
-                            if (pulsarClient == null) {
+                            List<String> subs = pulsarAdmin.topics().getSubscriptions(topic);
+                            if (subs == null || !subs.contains(subscriptionName)) {
+                                return createErrorResult("Subscription not found: " + subscriptionName);
+                            }
+                        } catch (Exception e) {
+                            LOGGER.warn("Failed to verify subscription existence for {}: {}", topic, e.toString());
+                        }
+
+                        List<Map<String, Object>> out = new ArrayList<>();
+
+                        try {
+                            PulsarClient client = getClient();
+                            if (client == null) {
                                 return createErrorResult("Pulsar Client is not available");
                             }
 
-                            try (Consumer<byte[]> consumer = pulsarClient.newConsumer()
+                            int rq = Math.min(Math.max(messageCount, 10), 1000);
+                            long deadline = System.nanoTime() + (timeoutMs * 1_000_000L);
+
+                            try (Consumer<byte[]> consumer = client.newConsumer()
                                     .topic(topic)
                                     .subscriptionName(subscriptionName)
-                                    .subscriptionType(SubscriptionType.Exclusive)
+                                    .subscriptionType(subType)
+                                    .receiverQueueSize(rq)
                                     .subscribe()) {
 
                                 for (int i = 0; i < messageCount; i++) {
-                                    Message<byte[]> msg = consumer.receive(timeoutMs, TimeUnit.MILLISECONDS);
+                                    long remainMs = Math.max(0L, (deadline - System.nanoTime()) / 1_000_000L);
+                                    if (remainMs == 0) {
+                                        break;
+                                    }
+
+                                    Message<byte[]> msg = consumer.receive((int) Math.min(remainMs, Integer.MAX_VALUE),
+                                            TimeUnit.MILLISECONDS);
                                     if (msg == null) {
                                         break;
                                     }
 
-                                    Map<String, Object> messageInfo = new HashMap<>();
-                                    messageInfo.put("messageId", msg.getMessageId().toString());
-                                    messageInfo.put("key", msg.getKey());
-                                    messageInfo.put("content", new String(msg.getData(), StandardCharsets.UTF_8));
-                                    messageInfo.put("publishTime", msg.getPublishTime());
-                                    messageInfo.put("properties", msg.getProperties());
-                                    messageInfo.put("dataSize", msg.getData().length);
+                                    Map<String, Object> m = new HashMap<>();
+                                    m.put("messageId", msg.getMessageId().toString());
+                                    m.put("key", msg.getKey());
+                                    byte[] data = msg.getData();
+                                    m.put("dataUtf8", safeToUtf8(data));
+                                    m.put("dataBase64", java.util.Base64.getEncoder().encodeToString(data));
+                                    m.put("publishTime", msg.getPublishTime());
+                                    m.put("eventTime", msg.getEventTime());
+                                    m.put("properties", msg.getProperties());
+                                    m.put("producerName", msg.getProducerName());
+                                    try {
+                                        m.put("redeliveryCount", msg.getRedeliveryCount());
+                                    } catch (Throwable ignore) {}
+                                    m.put("dataSize", data != null ? data.length : 0);
 
-                                    messages.add(messageInfo);
-                                    consumer.acknowledge(msg);
+                                    out.add(m);
+
+                                    if (ack) {
+                                        try {
+                                            consumer.acknowledge(msg);
+                                        } catch (Exception ackEx) {
+                                            LOGGER.warn("Acknowledge failed: {}", ackEx.toString());
+                                        }
+                                    }
                                 }
                             }
                         } catch (Exception clientException) {
                             LOGGER.error("Failed to receive messages using PulsarClient", clientException);
-                            return createErrorResult("Failed to receive messages - PulsarClient error "
+                            return createErrorResult("Failed to receive messages - PulsarClient error: "
                                     + clientException.getMessage());
                         }
 
@@ -618,12 +772,13 @@ public class MessageTools extends BasePulsarTools {
                         result.put("topic", topic);
                         result.put("subscriptionName", subscriptionName);
                         result.put("requestCount", messageCount);
-                        result.put("receivedCount", messages.size());
-                        result.put("messages", messages);
+                        result.put("receivedCount", out.size());
+                        result.put("ack", ack);
+                        result.put("subscriptionType", subType.toString());
                         result.put("timeoutMs", timeoutMs);
+                        result.put("messages", out);
 
                         addTopicBreakdown(result, topic);
-
                         return createSuccessResult("Messages received successfully", result);
 
                     } catch (IllegalArgumentException e) {
@@ -635,4 +790,16 @@ public class MessageTools extends BasePulsarTools {
                 })
                 .build());
     }
+
+    private static String safeToUtf8(byte[] data) {
+        if (data == null) {
+            return null;
+        }
+        try {
+            return new String(data, StandardCharsets.UTF_8);
+        } catch (Throwable ignore) {
+            return null;
+        }
+    }
+
 }
